--- a/config/config.h.in
+++ b/config/config.h.in
@@ -1,3 +1,5 @@
+#define DEBUGMODE @ircd_DEBUGMODE@
+
 #define AVBANLEN @ircd_AVBANLEN@
 #define BUFFERPOOL @ircd_BUFFERPOOL@
 #define CONNECTFREQUENCY @ircd_CONNECTFREQUENCY@
@@ -42,3 +44,4 @@
 #define HAVE_MEMMOVE 1
 #define HAVE_SYS_TIME_H 1
 #define HAVE_SYS_MALLOC_H 1
+#define HAVE_UNISTD_H 1
