--- a/config/config.h.in
+++ b/config/config.h.in
@@ -12,6 +12,7 @@
 #define HANGONGOODLINK @ircd_HANGONGOODLINK@
 #define HANGONRETRYDELAY @ircd_HANGONRETRYDELAY@
 #define KILLCHASETIMELIMIT @ircd_KILLCHASETIMELIMIT@
+#define LPATH "@ircd_LPATH@"
 #define MAXCHANNELSPERUSER @ircd_MAXCHANNELSPERUSER@
 #define MAXCONNECTIONS @ircd_MAXCONNECTIONS@
 #define MAXIMUM_LINKS @ircd_MAXIMUM_LINKS@
