Added LOGFILE to configuration files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,6 @@ project (ircd)
 
 set (CMAKE_BUILD_TYPE Debug)
 
-IF(CMAKE_BUILD_TYPE MATCHES Debug)
-    set (ircd_DEBUGMODE 1)
-    set (ircd_LPATH "/tmp/ircd.log")
-ENDIF()
-
 set (ircd_AVBANLEN 40)
 set (ircd_BUFFERPOOL 27000000)
 set (ircd_CONNECTFREQUENCY 600)
@@ -19,6 +14,7 @@ set (ircd_DBPATH "database")
 set (ircd_DEFAULTMAXSENDQLENGTH 40000)
 set (ircd_HANGONGOODLINK 300)
 set (ircd_HANGONRETRYDELAY 10)
+set (ircd_LOGPATH "/dev/null")
 set (ircd_MAXCHANNELSPERUSER 5)
 set (ircd_MPATH "ircd.motd")
 set (ircd_KILLCHASETIMELIMIT 30)
@@ -32,6 +28,12 @@ set (ircd_RPATH "remote.motd")
 set (ircd_MAXSILES 15)
 set (ircd_MAXSILELENGTH MAXSILES*AVBANLEN)
 set (ircd_SPATH "")
+
+IF(CMAKE_BUILD_TYPE MATCHES Debug)
+    set (ircd_DEBUGMODE 1)
+    set (ircd_LPATH "/tmp/ircd.log")
+    set (ircd_LOGPATH LPATH)
+ENDIF()
 
 configure_file (
   "config/config.h.in"
