--- a/config/config.h.in
+++ b/config/config.h.in
@@ -13,6 +13,7 @@
 #define HANGONRETRYDELAY @ircd_HANGONRETRYDELAY@
 #define KILLCHASETIMELIMIT @ircd_KILLCHASETIMELIMIT@
 #define LPATH "@ircd_LPATH@"
+#define LOGPATH "@ircd_LOGPATH"
 #define MAXCHANNELSPERUSER @ircd_MAXCHANNELSPERUSER@
 #define MAXCONNECTIONS @ircd_MAXCONNECTIONS@
 #define MAXIMUM_LINKS @ircd_MAXIMUM_LINKS@
